# agents_chatting

./: .gitignore  README.md  load_test.py  pyproject.toml
inbound_agent/: Dockerfile  inbound_agent.py  pyproject.toml
outbound_agent/: Dockerfile  outbound_agent.py  pyproject.toml
